syntax="proto3";

option csharp_namespace = "HappyCoding.ProtobufSerialization.UsingGoogleProtobuf.Data";

message MyTestMessage {
  string firstName = 1;
  string lastName = 2;
  int32 age = 3;
  repeated string emails = 4;
}